--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
   </div>
 
-  <form id="uncss-form" enctype="multipart/form-data">
+  <form id="uncss-form">
     <div class="row">
       <div class="column">
         <label for="inputHtml">Your HTML</label>
