added axios, optimized frontend code

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div class="text-center">
-      <button class="button button-large" type="submit">UnCSS my styles</button>
+      <button id="submitButton" class="button button-large" type="submit">UnCSS my styles</button>
     </div>
   </form>
   <div class="row">
